Agrego hasta ej32 de Js

--- a/HTML/index4.html
+++ b/HTML/index4.html
@@ -27,6 +27,7 @@ Soy un span y pasó el salto de linea
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset='UTF-8'>
         <title>Divs y Spans</title>
     </head>
     <body>
