--- a/HTML/index5.html
+++ b/HTML/index5.html
@@ -22,3 +22,24 @@ HTHML tiene las siguientes etiquetas
  -->
  
  <!DOCTYPE html>
+ <html>
+   <head>
+      <meta charset='UTF-8'>
+      <title>Listas desordenadas</title>   
+   </head>
+   <body>
+      <h1>Lista desordenada</h1>
+      <p>HTML tiene las siguientes etiquetas</p>
+      <ul>
+        <li>doctype</li>
+        <li>html</li>
+        <li>head</li>
+        <li>body</li>
+        <li>div</li>
+        <li>span</li>
+        <li>br</li>
+        <li>hr</li>
+        <li>y muchos más</li>
+      </ul>
+   </body>
+ </html>
